// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Details render with modules and edit menu 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--xxlarge header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/home/projects/all"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                data-icon="harness"
              >
                <svg
                  height="16"
                  viewBox="0 0 25 25"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                    fill="#4facdf"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                projectsText
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main title StyledProps--padding-top-small"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="colorBar"
            style="background-color: rgb(0, 99, 247);"
          />
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-variation-small"
            style="--text-line-clamp: 1;"
          >
            idLabel
          </p>
          <div
            class="divider"
          />
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-variation-small"
            style="--text-line-clamp: 1;"
          >
            orgLabel
            :
             
            <a
              href="/account/testAcc/settings/organizations/testOrg/details"
            >
              testOrg
            </a>
          </p>
          <div
            class="divider"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-h4 StyledProps--padding-right-xlarge"
            style="--text-line-clamp: 1;"
          >
            dummy name
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag1
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag2:tag3
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag4:tag3
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag5:tag3
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tags"
                style="max-width: 80px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag6:tag3
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-small StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-end"
    >
      <span
        class="bp3-popover-wrapper bp3-dark"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Options"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 4 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="2"
                  r="1.5"
                />
                <circle
                  cx="2"
                  cy="8"
                  r="1.5"
                />
                <circle
                  cx="2"
                  cy="14"
                  r="1.5"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-right-huge StyledProps--margin-right-huge"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--padding-left-xsmall StyledProps--padding-bottom-small"
          >
            adminLabel (1)
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="AvatarGroup--stack projectDetailsAvatarGroup"
              style="--avatar-over-lap: -13px;"
            >
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 25px; width: 32px; height: 32px; font-size: 20px; font-weight: 200;"
                      tabindex="0"
                    >
                      +
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="19bYA-ooQZOTZQxf2N-VPA"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--padding-left-xsmall StyledProps--padding-bottom-small"
          >
            collaboratorsLabel (5)
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="AvatarGroup--stack projectDetailsAvatarGroup"
              style="--avatar-over-lap: -13px;"
            >
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 25px; width: 32px; height: 32px; font-size: 20px; font-weight: 200;"
                      tabindex="0"
                    >
                      +
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="lv0euRhKRCyiXWzS7pOg6g"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="0osgWsTZRsSZ8RWfjLRkEg"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="ZqXNvYmURnO46PX7HwgEtQ"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="nhLgdGgxS_iqa0KP5edC-w"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="BnTbQTIJS4SkadzYv0BcbA"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main enabledModules fullWidth StyledProps--padding-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-small"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
            >
              projectsOrgs.landingDashboard.atAGlance
            </p>
            <div
              class="bp3-popover-wrapper timeRangeSelect Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    placeholder="- Select -"
                    style="padding-right: 0px;"
                    type="text"
                    value="projectsOrgs.landingDashboard.last30Days"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main container"
          >
            <div
              class="glanceCards glanceCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card card glanceCard"
              >
                <span
                  class="bp3-icon StyledProps--main icon StyledProps--color StyledProps--color-grey600"
                  data-icon="placeholder"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <filter
                      id="placeholder_svg__a"
                    >
                      <fecolormatrix
                        in="SourceGraphic"
                        values="0 0 0 0 0.453512 0 0 0 0 0.490089 0 0 0 0 0.533316 0 0 0 1.000000 0"
                      />
                    </filter>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      filter="url(#placeholder_svg__a)"
                    >
                      <path
                        d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm2.86 8.822a.551.551 0 00-.44.219l-2.92 3.853a.363.363 0 01-.57 0l-1.6-1.982a.544.544 0 00-.855 0l-3.104 4.092a.755.755 0 00-.154.454v.679a.56.56 0 00.548.559h13.513a.56.56 0 00.548-.56v-.685a.755.755 0 00-.146-.447L15.297 9.04a.551.551 0 00-.438-.219zM9.6 6.261c-.807 0-1.46.667-1.46 1.49s.653 1.491 1.46 1.491c.807 0 1.46-.667 1.46-1.49S10.408 6.26 9.6 6.26z"
                        fill="#d8d8d8"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main lineClamp lineHeight StyledProps--color StyledProps--color-black StyledProps--font-variation-h3"
                >
                  0
                </p>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main lineClamp StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-top-small"
                  style="--text-line-clamp: 1;"
                >
                  na
                </p>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card card glanceCard"
              >
                <span
                  class="bp3-icon StyledProps--main icon StyledProps--color StyledProps--color-grey600"
                  data-icon="placeholder"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <filter
                      id="placeholder_svg__a"
                    >
                      <fecolormatrix
                        in="SourceGraphic"
                        values="0 0 0 0 0.453512 0 0 0 0 0.490089 0 0 0 0 0.533316 0 0 0 1.000000 0"
                      />
                    </filter>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      filter="url(#placeholder_svg__a)"
                    >
                      <path
                        d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm2.86 8.822a.551.551 0 00-.44.219l-2.92 3.853a.363.363 0 01-.57 0l-1.6-1.982a.544.544 0 00-.855 0l-3.104 4.092a.755.755 0 00-.154.454v.679a.56.56 0 00.548.559h13.513a.56.56 0 00.548-.56v-.685a.755.755 0 00-.146-.447L15.297 9.04a.551.551 0 00-.438-.219zM9.6 6.261c-.807 0-1.46.667-1.46 1.49s.653 1.491 1.46 1.491c.807 0 1.46-.667 1.46-1.49S10.408 6.26 9.6 6.26z"
                        fill="#d8d8d8"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main lineClamp lineHeight StyledProps--color StyledProps--color-black StyledProps--font-variation-h3"
                >
                  0
                </p>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main lineClamp StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-top-small"
                  style="--text-line-clamp: 1;"
                >
                  na
                </p>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card card glanceCard"
              >
                <span
                  class="bp3-icon StyledProps--main icon StyledProps--color StyledProps--color-grey600"
                  data-icon="placeholder"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <filter
                      id="placeholder_svg__a"
                    >
                      <fecolormatrix
                        in="SourceGraphic"
                        values="0 0 0 0 0.453512 0 0 0 0 0.490089 0 0 0 0 0.533316 0 0 0 1.000000 0"
                      />
                    </filter>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      filter="url(#placeholder_svg__a)"
                    >
                      <path
                        d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm2.86 8.822a.551.551 0 00-.44.219l-2.92 3.853a.363.363 0 01-.57 0l-1.6-1.982a.544.544 0 00-.855 0l-3.104 4.092a.755.755 0 00-.154.454v.679a.56.56 0 00.548.559h13.513a.56.56 0 00.548-.56v-.685a.755.755 0 00-.146-.447L15.297 9.04a.551.551 0 00-.438-.219zM9.6 6.261c-.807 0-1.46.667-1.46 1.49s.653 1.491 1.46 1.491c.807 0 1.46-.667 1.46-1.49S10.408 6.26 9.6 6.26z"
                        fill="#d8d8d8"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main lineClamp lineHeight StyledProps--color StyledProps--color-black StyledProps--font-variation-h3"
                >
                  0
                </p>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main lineClamp StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-top-small"
                  style="--text-line-clamp: 1;"
                >
                  na
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-huge"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Details render with no modules and invite collaborators 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--xlarge header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    data-testid="page-header"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="PageHeader--breadcrumbsDiv"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/testAcc/home/projects/all"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                data-icon="harness"
              >
                <svg
                  height="16"
                  viewBox="0 0 25 25"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                    fill="#4facdf"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
              >
                projectsText
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="8"
                viewBox="0 0 8 14"
                width="8"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main title StyledProps--padding-top-small"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-bottom-medium StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="colorBar"
            style="background-color: rgb(0, 99, 247);"
          />
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-variation-small"
            style="--text-line-clamp: 1;"
          >
            idLabel
          </p>
          <div
            class="divider"
          />
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--font-variation-small"
            style="--text-line-clamp: 1;"
          >
            orgLabel
            :
             
            <a
              href="/account/testAcc/settings/organizations/testOrg/details"
            >
              testOrg
            </a>
          </p>
          <div
            class="divider"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-h4 StyledProps--padding-right-xlarge"
            style="--text-line-clamp: 1;"
          >
            dummy name
          </p>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-small StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-end"
    >
      <span
        class="bp3-popover-wrapper bp3-dark"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Options"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 4 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="2"
                  r="1.5"
                />
                <circle
                  cx="2"
                  cy="8"
                  r="1.5"
                />
                <circle
                  cx="2"
                  cy="14"
                  r="1.5"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-right-huge StyledProps--margin-right-huge"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--padding-left-xsmall StyledProps--padding-bottom-small"
          >
            adminLabel (1)
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="AvatarGroup--stack projectDetailsAvatarGroup"
              style="--avatar-over-lap: -13px;"
            >
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 25px; width: 32px; height: 32px; font-size: 20px; font-weight: 200;"
                      tabindex="0"
                    >
                      +
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="19bYA-ooQZOTZQxf2N-VPA"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-xsmall StyledProps--color StyledProps--color-grey400 StyledProps--padding-left-xsmall StyledProps--padding-bottom-small"
          >
            collaboratorsLabel (5)
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="AvatarGroup--stack projectDetailsAvatarGroup"
              style="--avatar-over-lap: -13px;"
            >
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 25px; width: 32px; height: 32px; font-size: 20px; font-weight: 200;"
                      tabindex="0"
                    >
                      +
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="lv0euRhKRCyiXWzS7pOg6g"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="0osgWsTZRsSZ8RWfjLRkEg"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="ZqXNvYmURnO46PX7HwgEtQ"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="nhLgdGgxS_iqa0KP5edC-w"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                uuid="BnTbQTIJS4SkadzYv0BcbA"
              >
                <span
                  class="bp3-popover-wrapper Avatar--avatarPopOver"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="Avatar--AvatarInner"
                      style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                      tabindex="0"
                    >
                      E
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main enabledModules fullWidth StyledProps--padding-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-small"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--color StyledProps--color-black"
            >
              projectsOrgs.landingDashboard.atAGlance
            </p>
            <div
              class="bp3-popover-wrapper timeRangeSelect Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    placeholder="- Select -"
                    style="padding-right: 0px;"
                    type="text"
                    value="projectsOrgs.landingDashboard.last30Days"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main container"
          >
            <div
              class="glanceCards glanceCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card card glanceCard"
              >
                <span
                  class="bp3-icon StyledProps--main icon StyledProps--color StyledProps--color-grey600"
                  data-icon="placeholder"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <filter
                      id="placeholder_svg__a"
                    >
                      <fecolormatrix
                        in="SourceGraphic"
                        values="0 0 0 0 0.453512 0 0 0 0 0.490089 0 0 0 0 0.533316 0 0 0 1.000000 0"
                      />
                    </filter>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      filter="url(#placeholder_svg__a)"
                    >
                      <path
                        d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm2.86 8.822a.551.551 0 00-.44.219l-2.92 3.853a.363.363 0 01-.57 0l-1.6-1.982a.544.544 0 00-.855 0l-3.104 4.092a.755.755 0 00-.154.454v.679a.56.56 0 00.548.559h13.513a.56.56 0 00.548-.56v-.685a.755.755 0 00-.146-.447L15.297 9.04a.551.551 0 00-.438-.219zM9.6 6.261c-.807 0-1.46.667-1.46 1.49s.653 1.491 1.46 1.491c.807 0 1.46-.667 1.46-1.49S10.408 6.26 9.6 6.26z"
                        fill="#d8d8d8"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main lineClamp lineHeight StyledProps--color StyledProps--color-black StyledProps--font-variation-h3"
                >
                  0
                </p>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main lineClamp StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-top-small"
                  style="--text-line-clamp: 1;"
                >
                  na
                </p>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card card glanceCard"
              >
                <span
                  class="bp3-icon StyledProps--main icon StyledProps--color StyledProps--color-grey600"
                  data-icon="placeholder"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <filter
                      id="placeholder_svg__a"
                    >
                      <fecolormatrix
                        in="SourceGraphic"
                        values="0 0 0 0 0.453512 0 0 0 0 0.490089 0 0 0 0 0.533316 0 0 0 1.000000 0"
                      />
                    </filter>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      filter="url(#placeholder_svg__a)"
                    >
                      <path
                        d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm2.86 8.822a.551.551 0 00-.44.219l-2.92 3.853a.363.363 0 01-.57 0l-1.6-1.982a.544.544 0 00-.855 0l-3.104 4.092a.755.755 0 00-.154.454v.679a.56.56 0 00.548.559h13.513a.56.56 0 00.548-.56v-.685a.755.755 0 00-.146-.447L15.297 9.04a.551.551 0 00-.438-.219zM9.6 6.261c-.807 0-1.46.667-1.46 1.49s.653 1.491 1.46 1.491c.807 0 1.46-.667 1.46-1.49S10.408 6.26 9.6 6.26z"
                        fill="#d8d8d8"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main lineClamp lineHeight StyledProps--color StyledProps--color-black StyledProps--font-variation-h3"
                >
                  0
                </p>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main lineClamp StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-top-small"
                  style="--text-line-clamp: 1;"
                >
                  na
                </p>
              </div>
              <div
                class="bp3-card bp3-elevation-0 Card--card card glanceCard"
              >
                <span
                  class="bp3-icon StyledProps--main icon StyledProps--color StyledProps--color-grey600"
                  data-icon="placeholder"
                >
                  <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <filter
                      id="placeholder_svg__a"
                    >
                      <fecolormatrix
                        in="SourceGraphic"
                        values="0 0 0 0 0.453512 0 0 0 0 0.490089 0 0 0 0 0.533316 0 0 0 1.000000 0"
                      />
                    </filter>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      filter="url(#placeholder_svg__a)"
                    >
                      <path
                        d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm2.86 8.822a.551.551 0 00-.44.219l-2.92 3.853a.363.363 0 01-.57 0l-1.6-1.982a.544.544 0 00-.855 0l-3.104 4.092a.755.755 0 00-.154.454v.679a.56.56 0 00.548.559h13.513a.56.56 0 00.548-.56v-.685a.755.755 0 00-.146-.447L15.297 9.04a.551.551 0 00-.438-.219zM9.6 6.261c-.807 0-1.46.667-1.46 1.49s.653 1.491 1.46 1.491c.807 0 1.46-.667 1.46-1.49S10.408 6.26 9.6 6.26z"
                        fill="#d8d8d8"
                      />
                    </g>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main lineClamp lineHeight StyledProps--color StyledProps--color-black StyledProps--font-variation-h3"
                >
                  0
                </p>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main lineClamp StyledProps--color StyledProps--color-grey600 StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--margin-top-small"
                  style="--text-line-clamp: 1;"
                >
                  na
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-top-huge"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
